--- a/ResourceCentre/build.xml
+++ b/ResourceCentre/build.xml
@@ -10,8 +10,8 @@
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="lib/junit-4.12.jar"/>
-        <pathelement location="lib/hamcrest-core-1.3.jar"/>
+        <pathelement location="ant/junit.jar"/>
+    	<pathelement location="ant/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
     </path>
     <path id="ResourceCentre.classpath">
         <pathelement location="bin"/>
