--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,7 +22,9 @@ jobs:
         java-version: 1.8
     - name: Build with Ant
       run: ant -noinput -buildfile ResourceCentre/build.xml
+    - name: Compile JUnit Test
+      run: javac -cp ResourceCentre/bin:ResourceCentre/ant/junit.jar ResourceCentre/test/ResourceCentreTest.java -d ResourceCentre/bin
     - name: Run JUnit test
-      run: ant -f ResourceCentre/build.xml ResourceCentreTest
+      run: java -jar ResourceCentre/ant/junit.jar --classpath ResourceCentre/bin --scan-class-path 
     - name: Test Execution
       run: java -cp ResourceCentre/bin ResourceCentre < ResourceCentre/user_input.txt
