--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Build with Ant
       run: ant -noinput -buildfile ResourceCentre/build.xml
     - name: Compile JUnit Test
-      run: javac -cp ResourceCentre/bin:ResourceCentre/ant/junit.jar:ResourceCentre/ant/org.hamcrest.core_1.3.0.v201303031735.jar ResourceCentre/test/ResourceCentreTest.java -d ResourceCentre/bin
+      run: javac -cp ResourceCentre/ant/junit.jar ResourceCentre/test/ResourceCentreTest.java -d ResourceCentre/bin
     - name: Run JUnit test
-      run: java -jar ResourceCentre/ant/org.hamcrest.core_1.3.0.v201303031735.jar --classpath ResourceCentre/bin --scan-class-path 
+      run: java -cp ResourceCentre/bin:ResourceCentre/ant/junit.jar:ResourceCentre/ant/org.hamcrest.core_1.3.0.v201303031735.jar org.junit.runner.JUnitCore ResourceCentreTest
     - name: Test Execution
       run: java -cp ResourceCentre/bin ResourceCentre < ResourceCentre/user_input.txt
