--- a/ResourceCentre/.project
+++ b/ResourceCentre/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ResourceCentre</name>
+	<name>ResourceCentre_Original</name>
 	<comment></comment>
 	<projects>
 	</projects>
